menu collapse button fixed

--- a/src/components/Layout/sidemenu/styles/sidemenue.module.css
+++ b/src/components/Layout/sidemenu/styles/sidemenue.module.css
@@ -11,7 +11,11 @@
 .sideMenu::-webkit-scrollbar {
   display: none;
 }
-
+.ulHeader {
+  display: flex !important;
+  justify-content: space-between !important;
+  cursor: pointer;
+}
 .sideMenu :is(p) {
   margin: 0;
   /* font-weight: bold; */
@@ -51,4 +55,8 @@
   /* margin-top: 0.5rem;
   margin-left: 0.5rem; */
   width: 99%;
+}
+.active {
+  font-weight: bold;
+  color: rgb(196, 255, 47);
 }
